[gd_scene load_steps=9 format=3 uid="uid://tty8p4jotjjj"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_5oo8i"]
[ext_resource type="Texture2D" uid="uid://dynja7jvo180p" path="res://assets/textures/bg.png" id="1_qkpxb"]
[ext_resource type="PackedScene" uid="uid://jjonyg8h4jq2" path="res://scenes/hud.tscn" id="2_rpq1m"]
[ext_resource type="PackedScene" uid="uid://b035xathrlssr" path="res://scenes/player.tscn" id="2_wjxqa"]
[ext_resource type="PackedScene" uid="uid://cmki14s4ek4cp" path="res://scenes/enemy_spawner.tscn" id="3_e7j25"]
[ext_resource type="AudioStream" uid="uid://clxpt4u4u2t4h" path="res://assets/audio/hit.wav" id="6_qd6rm"]
[ext_resource type="AudioStream" uid="uid://b03w87melg5u5" path="res://assets/audio/explode.wav" id="7_ys7qv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_py0sc"]
size = Vector2(20, 988)

[node name="Game" type="Node2D"]
script = ExtResource("1_5oo8i")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_rpq1m")]

[node name="Backgorund" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundTexture" type="TextureRect" parent="Backgorund"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qkpxb")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_wjxqa")]
position = Vector2(109, 388)

[node name="Rockets" type="Node" parent="."]

[node name="EnemySpawner" parent="." instance=ExtResource("3_e7j25")]

[node name="Deadzone" type="Area2D" parent="."]
position = Vector2(-142, 370)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deadzone"]
scale = Vector2(1, 1.6)
shape = SubResource("RectangleShape2D_py0sc")

[node name="EnemyHitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qd6rm")

[node name="PlayerHurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ys7qv")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="Deadzone" to="." method="_on_deadzone_area_entered"]
